--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author:
   image: "nabinkarkithapa.PNG"
   greetings: "Hello world!"
   description: "Software developer from Nepal, currently making his living in Sydney."
-  bio: "Born in a remote village of Gulmi, Nepal, I some how managed to self teach myself programming and I try to blog about it when I can."
+  bio: "I some how managed to self teach myself programming and I try to blog about it when I can."
 
 # Contact form setings
 email: nabin@outlook.com
