--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ thankyou_page_description: "Thank you for your message!"
 
 # Social links
 twitter: "nabinked"
-facebook: "nabinked"
+facebook:
 github: "nabinked"
 codepen:
 dribbble:
