rename to plugins

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ navigation:
     url: /contact
 
 # Required Plugins
-plugins_dir:
+plugins:
   - jekyll-paginate
   - jekyll-tagsgenerator
   - jekyll-seo-tag
